[desktop-app] Added basic RTF support
	Hyper basic reader that works though

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -18,6 +18,7 @@ deskapp_srcs = [
 	'i18n.cpp',
 	'art-reader/image.cpp',
 	'art-reader/text.cpp',
+	'art-reader/text-rtf.cpp',
 	'db/account.cpp',
 	'db/artwork.cpp',
 	'db/artwork-loader.cpp',
