Marked many executable as build_by_default: false
	They don't need to be in the PHONY target, this simplify the build dependency graph (easier debug).

--- a/common/meson.build
+++ b/common/meson.build
@@ -16,7 +16,7 @@ common_incdirs = [
 common_link_args = [
 ]
 
-common_lib = static_library('common', common_srcs, include_directories: common_incdirs, dependencies: common_deps)
+common_lib = static_library('common', common_srcs, include_directories: common_incdirs, dependencies: common_deps, build_by_default: false)
 
 if (host_machine.system() == 'windows') and (cpp.get_id() == 'gcc')
 	# Statically link MinGW libs
