--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -55,7 +55,7 @@ if with_xdg
 	subdir('xdg')
 endif
 
-desktop_app_staticlib = static_library('desktop-app-staticlib', deskapp_srcs, deskapp_additional_srcs, dependencies: deskapp_deps)
+desktop_app_staticlib = static_library('desktop-app-staticlib', deskapp_srcs, deskapp_additional_srcs, dependencies: deskapp_deps, build_by_default: false)
 
 desktop_app_dep = declare_dependency(sources: deskapp_additional_srcs, dependencies: deskapp_deps, link_with: desktop_app_staticlib)
 
