--- a/sqls/meson.build
+++ b/sqls/meson.build
@@ -11,5 +11,5 @@ db_schema_src_no_test_prepare = [
 	'upgrade_v2.sql',
 ]
 
-db_schema_sources_exe = executable('gen-schema-sources', 'gen-schema-sources.cpp', install: false)
-db_schema_sources_target = custom_target('schema-sources', input: [db_schema_src,db_schema_src_no_test_prepare], command: [db_schema_sources_exe, '@OUTPUT0@', '@OUTPUT1@', '@INPUT@'], output: ['sqls.cpp', 'arcollect-sqls.hpp'], install: false, build_by_default: true)
+db_schema_sources_exe = executable('gen-schema-sources', 'gen-schema-sources.cpp', install: false, build_by_default: false)
+db_schema_sources_target = custom_target('schema-sources', input: [db_schema_src,db_schema_src_no_test_prepare], command: [db_schema_sources_exe, '@OUTPUT0@', '@OUTPUT1@', '@INPUT@'], output: ['sqls.cpp', 'arcollect-sqls.hpp'], install: false, build_by_default: false)
