[SQLs] Generate arcollect-sqls.hpp in the build-system now
	This avoid to rebuild almost everything when updating SQL files.

--- a/common/meson.build
+++ b/common/meson.build
@@ -12,12 +12,13 @@ common_srcs = [
 common_incdirs = [
 	include_directories('.'),
 	include_directories('sqlite3-hpp'),
+	include_directories('../sqls'),
 	config_h_inc,
 ]
 common_link_args = [
 ]
 
-common_lib = static_library('common', common_srcs, include_directories: common_incdirs, dependencies: common_deps, build_by_default: false)
+common_lib = static_library('common', common_srcs, include_directories: common_incdirs, dependencies: common_deps, sources: arcollect_sqls_hpp, build_by_default: false)
 
 if (host_machine.system() == 'windows') and (cpp.get_id() == 'gcc')
 	# Statically link MinGW libs
