--- a/common/tests/meson.build
+++ b/common/tests/meson.build
@@ -4,7 +4,7 @@ simple_common_tests = [
 
 foreach test: simple_common_tests
 	workdir = meson.current_build_dir() / test+'-data-home'
-	test(test,executable(test,test+'.cpp', db_schema_sources_target[1], dependencies: common_dep), env: {
+	test(test,executable(test,test+'.cpp', dependencies: common_dep), env: {
 		'ARCOLLECT_DATA_HOME': workdir,
 	}, protocol: 'tap')
 endforeach
