--- a/sqls/tests/meson.build
+++ b/sqls/tests/meson.build
@@ -10,7 +10,7 @@ test('test-sql-prepare',
 	executable('test-sql-prepare',
 		configure_file(input: 'test-sql-prepare.cpp', output: 'test-sql-prepare.cpp', configuration: {
 			'DB_SCHEMA_SRC_TEST_PREPARE': 'SQL('+'),\n\tSQL('.join(test_prepare)+')\n',
-		}), db_schema_sources_target[1], dependencies: common_dep
+		}), dependencies: common_dep
 	), env: {
 	'ARCOLLECT_DATA_HOME': meson.current_build_dir() / 'test-sql-prepare-data-home',
 }, protocol: 'tap')
