Update to OIIO 2.3.11.0

--- a/subprojects/packagefiles/oiio/src/libOpenImageIO/meson.build
+++ b/subprojects/packagefiles/oiio/src/libOpenImageIO/meson.build
@@ -67,6 +67,7 @@ libOpenImageIO_srcs = [
 	'xmp.cpp',
 	'color_ocio.cpp',
 	'maketexture.cpp',
+	'bluenoise.cpp',
 	'../libutil/argparse.cpp',
 	'../libutil/benchmark.cpp',
 	'../libutil/errorhandler.cpp', 
