Auto-detect Boost wrap version

--- a/subprojects/packagefiles/boost/meson.build
+++ b/subprojects/packagefiles/boost/meson.build
@@ -1,4 +1,4 @@
-project('boost', 'cpp', version: '1.78.0')
+project('boost', 'cpp')
 cpp = meson.get_compiler('cpp')
 add_project_arguments('-DBOOST_ALL_STATIC_LINK', language: 'cpp')
 boost_pub_args = [
@@ -15,4 +15,6 @@ boost_libs = []
 foreach module: boost_with
 	subdir('libs/'+module)
 endforeach
-boost_dep = declare_dependency(link_whole: boost_libs, include_directories: boost_inc, compile_args: boost_pub_args)
+
+boost_ver = cpp.get_define('BOOST_LIB_VERSION', include_directories: boost_inc, prefix: '#include <boost/version.hpp>').strip('"').replace('_','.')
+boost_dep = declare_dependency(link_whole: boost_libs, include_directories: boost_inc, compile_args: boost_pub_args, version: boost_ver)
