--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -24,6 +24,9 @@
 		"matches": ["https://www.deviantart.com/*/art/*"],
 		"js": ["content-scripts/common.js","content-scripts/deviantart.com.js"]
 	},{
+		"matches": ["https://www.tumbex.com/*"],
+		"js": ["content-scripts/common.js","content-scripts/tumblr.com-shared.js","content-scripts/tumbex.com.js"]
+	},{
 		"matches": ["https://twitter.com/*","https://mobile.twitter.com/*"],
 		"js": ["content-scripts/common.js","content-scripts/twitter.com.js"]
 	}],
