--- a/webextension/meson.build
+++ b/webextension/meson.build
@@ -25,6 +25,8 @@ webext_content_scripts = [
 	'e621.net-keyboard_shortcuts.js',
 	'furaffinity.net.js',
 	'twitter.com.js',
+	'tumblr.com-shared.js',
+	'tumbex.com.js',
 ]
 python_copy_command = [find_program('python3'),'-c','import shutil; import sys; shutil.copyfile(sys.argv[1],sys.argv[2])','@INPUT@','@OUTPUT@']
 subdir('content-scripts')
