[desktop-app] Limit the number of concurrent image loaded
	This will avoid excessive memory consumption burst

--- a/meson.build
+++ b/meson.build
@@ -86,6 +86,7 @@ if enable_native_progs
 	# Query C++ features
 	cpp_required_features = {
 		# C++20 features
+		'__cpp_lib_semaphore'          : '>=201907',
 		# C++17 features
 		'__cpp_fold_expressions'       : '>=201603',
 		'__cpp_lib_filesystem'         : '>=201703',
