--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -40,7 +40,7 @@
 	"browser_specific_settings": {
 		"gecko": {
 			"id": "@ARCOLLECT_MOZILLA_WEBEXT_ID@",
-			"strict_min_version": "57.0a1"
+			"strict_min_version": "@ARCOLLECT_WEBEXT_GECKO_MIN_VERSION@"
 		}
 	}
 }
