Added KnowYourMeme test set

--- a/webext-adder/tests/meson.build
+++ b/webext-adder/tests/meson.build
@@ -4,6 +4,7 @@ online_tests = files(
 	'artstation.com.json',
 	'e621.net.json',
 	'furaffinity.net.json',
+	'knowyourmeme.com.json',
 	'tumbex.com.json',
 )
 online_nsfw_tests = files(
